Fix z-index notifications and modal

--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -12,6 +12,8 @@
 
     .show-modal & {
         opacity: 0;
+        z-index: 1;
+        pointer-events: none;
     }
 }
 
